--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Olanrewaju Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Olanrewaju Oyekanmi Portfolio" name="description">
+  <meta content="Portfolio" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.jpg" rel="icon">
@@ -384,7 +384,7 @@
         &copy; Copyright <strong><span>iPortfolio</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">Olanrewaju</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
