--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         &copy; Copyright <strong><span>iPortfolio</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">Olanrewaju</a>
+        Designed by <a href="#">Olanrewaju</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
