--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="https://x.com/Ola_Olanrewaju_?t=BRnmx-GOc493SaasYobIYQ&s=09" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/oyekanmi.olanrewaju.7" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://instagram.com/ola_olanrewaju_?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://instagram.com/ola_olanrewaju_?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/olanrewaju-oyekanmi-1b4553243" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
