--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <iframe src="" frameborder="0"></iframe>
+              <iframe src=" https://lanreoyekanmi.github.io/academicjournal/" frameborder="0" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe></iframe>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -498,7 +498,7 @@
         &copy; Copyright <strong><span>iPortfolio</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="#">Olanrewaju</a>
+        Designed by <a href="https://lanreoyekanmi.github.io/portfolio/">Olanrewaju</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
