--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
             <div class="portfolio-wrap">
               <iframe src=" https://lanreoyekanmi.github.io/academicjournal/" frameborder="0" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe></iframe>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://lanreoyekanmi.github.io/academicjournal/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
