--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
               </ul>
             </div>
           </div>
+          <div class="resume">
+            <a href="assets/Resume.pdf" download target="_blank">Download my Resume here</a>
+          </div>
         </div>
 
       </div>
@@ -280,7 +283,7 @@
             <div class="portfolio-wrap">
               <iframe src=" https://lanreoyekanmi.github.io/academicjournal/" frameborder="0" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe></iframe>
               <div class="portfolio-links">
-                <a href="https://lanreoyekanmi.github.io/academicjournal/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://lanreoyekanmi.github.io/academicjournal/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
