--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <iframe src=" https://lanreoyekanmi.github.io/academicjournal/" frameborder="0"  style="border:0; width: 100%; height: 300px;" allowfullscreen></iframe></iframe>
+              <iframe src=" https://lanreoyekanmi.github.io/academicjournal/" frameborder="0"  style="border:0; width: 100%; height: 300px;" allowfullscreen alt="Institutional repository"></iframe></iframe>
               <div class="portfolio-links">
                 <a href="https://lanreoyekanmi.github.io/academicjournal/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -290,7 +290,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-             <iframe src=" https://lanreoyekanmi.github.io/creditcard/" frameborder="0" style="border:0; width: 100%; height: 300px;" allowfullscreen></iframe>
+             <iframe src=" https://lanreoyekanmi.github.io/creditcard/" frameborder="0" style="border:0; width: 100%; height: 300px;" allowfullscreen alt="credit card form"></iframe>
               <div class="portfolio-links">
                 <a href="https://lanreoyekanmi.github.io/creditcard/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -299,10 +299,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="graphic designs">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
