--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://x.com/Ola_Olanrewaju_?t=BRnmx-GOc493SaasYobIYQ&s=09" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/oyekanmi.olanrewaju.7" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/ola_olanrewaju_?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://github.com/lanreoyekanmi" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/olanrewaju-oyekanmi-1b4553243" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -106,7 +106,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>lanrewajuoyekanmi@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Emailone:</strong> <span>lanrewajuoyekanmi@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
