--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">EdTech Specialists<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -292,7 +292,7 @@
             <div class="portfolio-wrap">
              <iframe src="https://lanreoyekanmi.github.io/coffeemenu/" frameborder="0" style="border:0; width: 100%; height: 300px;" allowfullscreen alt="credit card form"></iframe>
               <div class="portfolio-links">
-                <a href="https://lanreoyekanmi.github.io/coffeemenu/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://lanreoyekanmi.github.io/coffeemenu/" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -319,7 +319,7 @@
             <div class="portfolio-wrap">
              <iframe src="https://lanreoyekanmi.github.io/creditcard/" frameborder="0" style="border:0; width: 100%; height: 300px;" allowfullscreen alt="coffee menu"></iframe>
               <div class="portfolio-links">
-                <a href="https://lanreoyekanmi.github.io/creditcard/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://lanreoyekanmi.github.io/creditcard/" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
