Meta Update Meta Descripiton and key word update to improve seo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Olanrewaju Portfolio</title>
   <meta content="Olanrewaju Oyekanmi Portfolio" name="description">
-  <meta content="Portfolio" name="keywords">
+  <meta content="Portfolio" name="Olanrewaju Oyekanmi">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.jpg" rel="icon">
@@ -40,7 +40,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile.jpg" alt="profile image" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Olanrewaju Oyekanmi</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://x.com/Ola_Olanrewaju_?t=BRnmx-GOc493SaasYobIYQ&s=09" class="twitter"><i class="bx bxl-twitter"></i></a>
