--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>27 September 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://lanreoyekanmi.github.io/portfolio/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+234 8147 5313 01</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ilorin, Nigeria</span></li>
                 </ul>
