met content description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Olanrewaju Portfolio</title>
-  <meta content="Olanrewaju Oyekanmi Portfolio" name="description">
+  <meta content="Olanrewaju Oyekanmi Portfolio" name="portfolio">
   <meta content="Portfolio" name="Olanrewaju Oyekanmi">
 
   <!-- Favicons -->
