meta description and keyword update

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Olanrewaju Portfolio</title>
-  <meta content="Olanrewaju Oyekanmi Portfolio" name="portfolio">
-  <meta content="Portfolio" name="Olanrewaju Oyekanmi">
+  <meta content="Olanrewaju Oyekanmi Portfolio" name="description">
+  <meta content="Portfolio" name="keyword">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.jpg" rel="icon">
