--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Olanrewaju Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Olanrewaju Oyekanmi Portfolio" name="description">
+  <meta content="Portfolio" name="keyword">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -40,13 +40,13 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile.jpg" alt="profile image" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Olanrewaju Oyekanmi</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://x.com/Ola_Olanrewaju_?t=BRnmx-GOc493SaasYobIYQ&s=09" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/oyekanmi.olanrewaju.7" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/ola_olanrewaju_?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://instagram.com/ola_olanrewaju_?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/lanreoyekanmi" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/olanrewaju-oyekanmi-1b4553243" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -86,7 +86,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="profile image">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Educational Technologist &amp; Web Developer.</h3>
@@ -97,7 +97,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>27 September 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://lanreoyekanmi.github.io/portfolio/">Click here</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+234 8147 5313 01</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ilorin, Nigeria</span></li>
                 </ul>
@@ -106,7 +106,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>lanrewajuoyekanmi@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>lanrewajuoyekanmi@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -160,7 +160,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">EdTech Specialists<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -250,12 +250,72 @@
               </ul>
             </div>
           </div>
+          <div class="resume">
+            <a href="assets/Resume.pdf" download target="_blank">Download my Resume here</a>
+          </div>
         </div>
 
       </div>
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
+    <section id="portfolio" class="portfolio section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Portfolio</h2>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-card">Graphic</li>
+              <li data-filter=".filter-web">Web</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <iframe src=" https://lanreoyekanmi.github.io/academicjournal/" frameborder="0"  style="border:0; width: 100%; height: 300px;" allowfullscreen alt="Institutional repository"></iframe></iframe>
+              <div class="portfolio-links">
+                <a href="https://lanreoyekanmi.github.io/academicjournal/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+             <iframe src="https://lanreoyekanmi.github.io/coffeemenu/" frameborder="0" style="border:0; width: 100%; height: 300px;" allowfullscreen alt="credit card form"></iframe>
+              <div class="portfolio-links">
+                <a href="https://lanreoyekanmi.github.io/coffeemenu/" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="graphic designs">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Graphic 1"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="graphic design">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Graphic 2"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+      </div>
+    </section>
 <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
@@ -381,10 +441,10 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>Olanrewaju</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://lanreoyekanmi.github.io/portfolio/">Olanrewaju</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
