download button update Design a new button to for my resume download

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4  col-sm-4" data-aos="fade-right">
+          <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="profile image">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
@@ -251,7 +251,9 @@
             </div>
           </div>
           <div class="resume">
-            <a href="assets/Resume.pdf" download target="_blank">Download my Resume here</a>
+            <button>
+              <a href="assets/Resume.pdf" download target="_blank">Download my Resume here</a>
+            </button>
           </div>
         </div>
 
@@ -466,5 +468,7 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
+</html>
 
 </html>
