--- a/index.html
+++ b/index.html
@@ -404,8 +404,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form id="contact-form" action="https://formspree.io/f/xdoqonzr"
-            method="POST">
+            <form id="contact-form" action="https://formspree.io/f/xdoqonzr" method="POST">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
