--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="profile image">
+            <img src="assets/img/profile-img.JPG" class="img-fluid" alt="profile image">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Educational Technologist &amp; Web Developer.</h3>
@@ -251,9 +251,7 @@
             </div>
           </div>
           <div class="resume">
-            <button>
-              <a href="assets/Resume.pdf" download target="_blank">Download my Resume here</a>
-            </button>
+            <a href="assets/Resume.pdf" download target="_blank">Download my Resume here</a>
           </div>
         </div>
 
@@ -404,7 +402,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form id="contact-form" action="https://formspree.io/f/xdoqonzr" method="POST">
+            <form action="https://formspree.io/f/xdoqonzr" method="post" role="form" class="email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -468,7 +466,5 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
-</html>
 
 </html>
