--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
           </div>
           <div class="resume">
-            <a href="assets/Resume.pdf" download target="_blank">Download my Resume here</a>
+            <button> <a href="assets/Resume.pdf" download target="_blank">Download my Resume here</a></button>
           </div>
         </div>
 
